@@ -31,6 +31,7 @@ typedef struct _PurpleBuddyIcon PurpleBuddyIcon;
 #include "blist.h"
 #include "imgstore.h"
 #include "prpl.h"
+#include "util.h"
 
 #ifdef __cplusplus
 extern "C" {
